Refactor: 클래스명의 Transactional 정리, 미사용 import 정리, 미사용 메서드 정리 등